syntax = "proto3";

package streaming;
option go_package = "github.com/ket0825/grpc-streaming/api/proto";

service VideoStreamingService  {
    rpc StreamVideo(stream VideoChunk) returns (StreamResponse) {};
}

message VideoChunk {
    bytes data = 1;           // 비디오 데이터 청크
    string content_type = 2;  // 비디오 컨텐츠 타입
    map<string, string> headers = 3;  // 비디오 메타데이터
    int32 sequence = 4;      // 청크 시퀀스 번호
}

message StreamResponse {
    bool success = 1;
    string message = 2;
}